[gd_scene load_steps=23 format=3 uid="uid://bsn5f2nlc2ari"]

[ext_resource type="Script" uid="uid://cs46ru7a62btt" path="res://Scripts/UI/Controls/CodeMarkdownLabel.gd" id="1_6nlsm"]
[ext_resource type="FontFile" uid="uid://drkyos7dgp0df" path="res://addons/markdownlabel/assets/fonts/Fira_Code/FiraCode-VariableFont_wght.ttf" id="1_wraaf"]
[ext_resource type="Texture2D" uid="uid://clkd2ov8pr5av" path="res://assets/icons/clipboard_icons/content_copy.svg" id="2_lkwot"]
[ext_resource type="Texture2D" uid="uid://dnnxmw21cvna4" path="res://assets/generated/pencil_icon_24_no_bg.png" id="2_mf858"]
[ext_resource type="Script" uid="uid://dbap0gqox0ty1" path="res://addons/markdownlabel/markdownlabel.gd" id="2_t10nn"]
[ext_resource type="Texture2D" uid="uid://du56h2igq3el7" path="res://assets/icons/expand-arrow-24.png" id="2_ye14t"]
[ext_resource type="Script" uid="uid://dcx7crs23nf4" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="3_15kna"]
[ext_resource type="Texture2D" uid="uid://uoecrgwhfrqq" path="res://assets/icons/replace_icons/replace_icon_white.png" id="3_iq8ce"]
[ext_resource type="Script" uid="uid://d0sin64i4v3op" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="4_8j4jt"]
[ext_resource type="Script" uid="uid://dlok0dv1tq2bf" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="5_0ndy7"]
[ext_resource type="Script" uid="uid://bayuh2vafablg" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="6_2d88d"]
[ext_resource type="Script" uid="uid://dfr1w7u3jgni3" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="7_dtxmp"]
[ext_resource type="Script" uid="uid://bsi6dexoofpe6" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="8_aq15b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6ce6"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctlsf"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7865"]
content_margin_left = 15.0
content_margin_top = 5.0
content_margin_right = 15.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_de4hw"]
resource_local_to_scene = true
script = ExtResource("3_15kna")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_s8if8"]
resource_local_to_scene = true
script = ExtResource("4_8j4jt")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_6ck5t"]
resource_local_to_scene = true
script = ExtResource("5_0ndy7")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_j3mc0"]
resource_local_to_scene = true
script = ExtResource("6_2d88d")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_whtla"]
resource_local_to_scene = true
script = ExtResource("7_dtxmp")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false

[sub_resource type="Resource" id="Resource_f738n"]
resource_local_to_scene = true
script = ExtResource("8_aq15b")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 134.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_type_variation = &"CodePanel"
theme_override_styles/panel = SubResource("StyleBoxFlat_p6ce6")
script = ExtResource("1_6nlsm")
expand_anim_duration = 0.7
expand_transition_type = 5
expand_icon_color = Color(0.160784, 1, 1, 1)

[node name="v" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="p" type="PanelContainer" parent="v"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ctlsf")

[node name="h" type="HBoxContainer" parent="v/p"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Control" type="Control" parent="v/p/h"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2

[node name="ExpandButton" type="Button" parent="v/p/h/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -15.0
offset_right = 19.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(19, 15)
focus_mode = 0
theme_type_variation = &"ExpandCodeButton"
icon = ExtResource("2_ye14t")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SyntaxLabel" type="Label" parent="v/p/h"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
text = "Python"

[node name="HBoxContainer" type="HBoxContainer" parent="v/p/h"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="ExtractButton" type="Button" parent="v/p/h/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "create a note from the response"
icon = ExtResource("2_mf858")

[node name="ReplaceAll" type="Button" parent="v/p/h/HBoxContainer"]
editor_description = "Replacing all in active tab"
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "takes the content into the currently selected tab (creates one if there isn't one)"
icon = ExtResource("3_iq8ce")

[node name="CopyButton" type="Button" parent="v/p/h/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "copy message content to clipboard"
icon = ExtResource("2_lkwot")

[node name="p2" type="PanelContainer" parent="v"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_m7865")

[node name="CodeLabel" type="RichTextLabel" parent="v/p2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_colors/font_selected_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_colors/selection_color = Color(0.313726, 0.647059, 1, 0.8)
theme_override_fonts/mono_font = ExtResource("1_wraaf")
bbcode_enabled = true
text = "[code syntax=python]
print(\"Hello Worldgg\")
dddddddgdghh
gd	fdgjjg[/code]"
fit_content = true
scroll_active = false
context_menu_enabled = true
threaded = true
selection_enabled = true
script = ExtResource("2_t10nn")
markdown_text = "```python
print(\"Hello Worldgg\")
dddddddgdghh
gd	fdgjjg
```"
h1 = SubResource("Resource_de4hw")
h2 = SubResource("Resource_s8if8")
h3 = SubResource("Resource_6ck5t")
h4 = SubResource("Resource_j3mc0")
h5 = SubResource("Resource_whtla")
h6 = SubResource("Resource_f738n")

[connection signal="pressed" from="v/p/h/Control/ExpandButton" to="." method="_on_expand_button_pressed"]
[connection signal="pressed" from="v/p/h/HBoxContainer/ReplaceAll" to="." method="_on_replace_all_pressed"]
